--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
     padding: 0;
 }
 
-
+button{
+    border: none;
+    background-color: rgb(196, 195, 195);
+    cursor: pointer;;
+}
 .input-todo {
     border: none;
     outline: none;
@@ -34,7 +38,7 @@
     justify-content: center;
 }
 
-#js-add-btn {
+.js-add-btn {
     margin-top: 7px;
     border: none;
     outline: none;
@@ -42,17 +46,26 @@
     height: 25px;
     background-color: rgb(201, 198, 198);
 }
+/* body */
 
 .app-container {
     display: flex;
     justify-content: center;
 }
 
-.inner-app-container {
+.done-btn{
+    display: flex;
+    justify-content: space-between;
     width: 700px;
     height: 38px;
-    text-align: left;
 }
+
+.inner-app-container{
+    display: flex;
+    justify-content: center;
+    margin-left: 10px;
+}
+
 .new-todo {
     width: 700px;
     display: flex;
@@ -62,10 +75,23 @@
 }
 
 .new-todo h1 {
-    margin-left: 50px;
+    margin-left: 25px;
 }
-.new-todo img {
-    margin-right: 50px;
+
+.new-todo-tools {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+    gap: 10px;
+}
+
+.done {
+    text-decoration: line-through;
+    color: green;
+}
+
+.btn-action img {
+    pointer-events: none;
 }
 
 
